tests/neg/i1688.scala
package scala
sealed trait Null  // error

object Null  // error

class AnyVal // error
